--- a/xuecheng-plus-content/xuecheng-plus-content-api/pom.xml
+++ b/xuecheng-plus-content/xuecheng-plus-content-api/pom.xml
@@ -8,6 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>xuecheng-plus-content-api</artifactId>
+    
     <dependencies>
         <dependency>
             <groupId>com.xuecheng</groupId>
@@ -20,6 +21,10 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
         <!--cloud的基础环境包-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
