--- a/xuecheng-plus-content/xuecheng-plus-content-api/src/main/resources/bootstrap.yml
+++ b/xuecheng-plus-content/xuecheng-plus-content-api/src/main/resources/bootstrap.yml
@@ -57,5 +57,8 @@ spring:
           - data-id: freemarker-config-${spring.profiles.active}.yaml
             group: xuecheng-plus-common
             refresh: true
+          - data-id: feign-${spring.profiles.active}.yaml
+            group: xuecheng-plus-common
+            refresh: true
   profiles:
     active: dev
